2008-06-11  Arno Rehn  <arno@arnorehn.de>

	* Added the AssemblySmokeInitializer Attribute. It takes a Type of
	  another class as an argument and is intended to initialize the
	  underlying smoke lib for the binding. A method named 'InitSmoke'
	  has to exist in the class specifed by the 'Type' argument and this
	  will be called once to initialize the smoke lib. It is applied like
	  this:
	      [assembly: AssemblySmokeInitializer(typeof(InitSoprano))]
	* Added C++ sources to the kimono bindings. They work now.
	* Applied this change to the Kimono and Soprano# bindings.

2008-06-04  Richard Dale  <richard.j.dale@gmail.com>

	* Remove references to QtWebKit from the Qyoto handlers.cpp so it 
	  links
	* Remove superfluous semi-colon from an extern C block

2008-05-31  Arno Rehn  <arno@arnorehn.de>

	* Updated AssemblyInfo.cs
	* Regenerated the QScintilla sources from the 2.2 release.
	* Removed the ReadProperty and WriteProperty classes and inlined the
	  code instead. It's not worth to have 2 extra classes for 5 or 6
	  lines of code.

2008-05-17  Arno Rehn  <arno@arnorehn.de>

	* Don't build kimono because the classes won't compile.
	* Fixed resolve_classname.
	* Changed 'modules' to 'qyoto_modules' in QScintillaSharp, too.
	* Added delegate support. This is now possible:
		Connect(slider, SIGNAL("valueChanged(int)"), delegate(int i) {
			Console.WriteLine("value: {0}", i);
		});
	  For the above to work you need either Mono 1.9+ or specify -langversion:linq.
	  Alternatively, you can give the parameter types as generic arguments, like
	  Connect<int>(...)

2008-05-16  Richard Dale  <richard.j.dale@gmail.com>

	* After the modular smoke changes, the QtWebKit classes were not being
	  built
	* Rename the 'modules' global variable qyoto_modules to reduce the chances
	  of a name clash

2008-05-13  Arno Rehn  <arno@arnorehn.de>

	* Fix memory leak in WriteProperty.
	* Added missing license information.

2008-05-06  Richard Dale  <richard.j.dale@gmail.com>
